# geog-510

./: .gitignore  CNAME  README.md  _config.yml  _toc.yml  index.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
book/about/: acknowledgments.md  schedule.md  syllabus.md  textbooks.md  videos.md
book/geospatial/: folium.ipynb  folium.md  geemap.ipynb  geemap.md  geopandas.ipynb  geopandas.md  get_started.ipynb  get_started.md  ipyleaflet.ipynb  ipyleaflet.md  ipywidgets.ipynb  ipywidgets.md  leafmap.ipynb  leafmap.md  localtileserver.ipynb  localtileserver.md  maplibre.ipynb  rasterio.ipynb  rasterio.md  rioxarray.ipynb  rioxarray.md  whitebox.ipynb  whitebox.md  xarray.ipynb  xarray.md
book/labs/: final_project.md  instructions.md  lab_01.ipynb  lab_01.md  lab_02.ipynb  lab_02.md  lab_03.ipynb  lab_03.md  lab_04.ipynb  lab_04.md  lab_05.ipynb  lab_05.md  lab_06.md  lab_07.md  lab_08.md  lab_09.ipynb  lab_09.md  lab_10.ipynb
book/lectures/: get_started.ipynb  get_started.md
book/python/: 01_get_started.ipynb  01_get_started.md  02_variables.ipynb  02_variables.md  02_variables.py  03_data_structures.ipynb  03_data_structures.md  04_string_operations.ipynb  04_string_operations.md  05_looping.ipynb  05_looping.md  06_functions_classes.ipynb  06_functions_classes.md  07_files.ipynb  07_files.md  08_numpy_pandas.ipynb  08_numpy_pandas.md
book/software/: cookiecutter.md  git.md  jupyterlab.md  markdown.md  miniconda.md  overview.md  qgis.md  vscode.md
