[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geog-510"
version = "0.1.0"
description = "Geographic Software Design"
readme = "README.md"
requires-python = ">=3.9"
dynamic = [
    "dependencies",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
geog-510 = { path = ".", editable = true }

[tool.pixi.tasks]
